import "ca/evanjones/protorpc/Protocol.proto";

package ca.evanjones.db;

enum Status {
    PREPARED = 0;
    ABORT_DEADLOCK = 1;
}

message Account {
    required int32 id = 1;
    required int32 balance = 2;
}

message ReadRequest {
    repeated int32 id = 1;
    optional int32 transaction_id = 2;
}

message ReadResult {
    repeated Account account = 1;
    optional Status status = 2 [default = PREPARED];
}

message WriteRequest {
    repeated Account account = 1;
    optional int32 transaction_id = 2;
}

message WriteResult {
    optional Status status = 1 [default = PREPARED];
}

message FinishRequest {
    required int32 transaction_id = 1;
    required bool commit = 2;
}

message FinishResult {
}

service TableService {
    rpc Read (ReadRequest) returns (ReadResult);
    rpc Write (WriteRequest) returns (WriteResult);
    rpc FinishTransaction (FinishRequest) returns (FinishResult);
}
